# hydraulic-telemetry-ai

./: Cargo.toml  ai.py
data/: data0.json  data1.json
model/: model  model.json  model.nn  model0.json  model1.json
src/: main.rs
