[package]
name = "hydraulic-telemetry-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
postcard = "1.0.8"
rand = "0.8.5"
csv = "1.2.2"
neuroflow = { git = "https://github.com/jaedson-barbosa/neuro-flow-core.git" }
plotters = "0.3.5"
plotters-bitmap = "0.3.3"
